Allow Policy to restrict loading of classes to Signed or message digest checked jar files. #5
Fix test failures caused by LoadClassPermission